# persistence-benchmarker

./: .gitignore  .pylintrc  README.md  TODO  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: floats.yml  strings.yml  test_object.yml
src/: main.py
src/services/: arg_manager.py  file_manager.py  json_manager.py  mysql_manager.py  sql_manager.py  sqlite_manager.py  yaml_manager.py
